--- a/README
+++ b/README
@@ -1,1 +1,5 @@
+# device_google_blueline
+
 Nothing is really here. The blueline device tree files are in device/google/crosshatch.
+
+This repo has the sole purpose of providing the dependencies for blueline. The new version of our roomservice requires that a device tree exists in the ProjectElixir-Devices repo according to the following scheme: android_device_manufacturer_device.
